--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -11,6 +11,105 @@
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
+
+    <script>
+        $(document).ready(async function () {
+            // Hole Daten aus dem Session Storage
+            let participantId = sessionStorage.getItem("participantId");
+            let participantType = sessionStorage.getItem("participantType");
+            let patientProfileArrayJSON = sessionStorage.getItem("patientProfileArray");
+            let patientProfileArray = JSON.parse(patientProfileArrayJSON);
+
+            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Arzt handelt
+            if (participantType != "Doctor") {
+                window.location.href = "../index.html";
+            }
+
+            // Hole Id des ausgewählten Patienten aus der URL und schreibe sie in den SessionStorage
+            let searchParams = new URLSearchParams(window.location.search);
+            let patientId = searchParams.get('Id');
+            sessionStorage.setItem("chosenPatient", patientId);
+
+            // Hole Patienten mit der übergebenen Id aus dem PatientenArray
+            let patient = patientProfileArray.find(p => p.personID === patientId);
+
+            // Hole Textfelder als jquery Variable
+            let vorname = $('#vorname');
+            let nachname = $('#nachname');
+            let geschlecht = $('#geschlecht');
+            let geburtsdatum = $('#geburtsdatum');
+            let blutgruppe = $('#blutgruppe');
+            let notfallkontakt = $('#notfallkontakt');
+            let reportTabelle = $('#reportTabelle');
+
+            // Setz Werte der Textfelder
+            vorname.text(patient.givenname);
+            nachname.text(patient.surname);
+            geschlecht.text(patient.sex);
+            geburtsdatum.text(patient.birthday);
+            blutgruppe.text(patient.bloodType);
+            notfallkontakt.text(patient.emergency_contact);
+
+            // Rest Aufruf um alle Doktoren zu erhalten
+            const doctorResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor", {
+                method: 'GET',
+                credentials: 'include'
+            });
+            const doctorArray = await doctorResponse.json();
+
+            // Rest Aufruf um alle Mitarbeiter zu erhalten
+            const employeeResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Employee", {
+                method: 'GET',
+                credentials: 'include'
+            });
+            const employeeArray = await employeeResponse.json();
+
+            // Erstelle Filter um nur die Reports des ausgewählten Patienten anzuzueigen
+            let patientPath = "org.oshealthrec.network.Patient";
+            let filterString = "?filter=%7B%22where%22%3A%7B%22owner%22%3A%22resource%3A" + patientPath + "%23" + patientId + "%22%7D%7D";
+
+            // Hole Reports aus der Blockchain
+            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Report" + filterString, {
+                method: 'GET',
+                credentials: 'include'
+            });
+            let reportArray = await response.json();
+
+            // Gebe Daten für alle Reports aus
+            reportArray.forEach(function (report) {
+
+                // Hole Ids des Arztes und des Doktors des Reports
+                let doctorId = report.uploadedForDr.split("#")[1];
+                let uploadedById = report.uploadedby.split('#')[1];
+                let uploadedBy;
+
+                // Hole Doktor und Employee, für den der Report hochgeladen wurde, aus dem Arrays
+                let doctor = doctorArray.find(d => d.personID === doctorId);
+                if (doctorId != uploadedById) {
+                    uploadedBy = employeeArray.find(e => e.personID === uploadedById);
+                } else {
+                    uploadedBy = doctor;
+                }
+
+                let date = report.date.split('T')[0];
+
+                let appendString = "<tr>" +
+                    "<td>" + report.reportID + "</td>" +
+                    "<td>" + report.title + "</td>" +
+                    "<td>" + report.description + "</td>" +
+                    "<td>" + date + "</td>" +
+                    "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>";
+                if (sessionStorage.getItem("participantId") === doctorId) {
+                    appendString += "<td>" + uploadedBy.givenname + " " + uploadedBy.surname + "</td>";
+                } else {
+                    appendString += "<td>" + " " + "</td>";
+                }
+                appendString += "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td></tr>";
+
+                reportTabelle.append(appendString);
+            });
+        })
+    </script>
 </head>
 <body class="doktor-patient">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
