--- a/oshealthrec-website/public/doktor/mitarbeiter-suche.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter-suche.html
@@ -10,6 +10,40 @@
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
+
+    <script>
+        $(document).ready(async function () {
+            // Hole ID des Nutzers aus dem Session Storage
+            let participantId = sessionStorage.getItem("participantId");
+            let participantType = sessionStorage.getItem("participantType");
+
+            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Doktor handelt
+            if (participantType != "Doctor") {
+                window.location.href = "../index.html";
+            }
+
+            // Hole Tabelle als jquery Variable
+            let mitarbeiterTabelle = $('#mitarbeiterTabelle');
+
+            // Rest Aufruf um alle Mitarbeiter zu erhalten
+            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Employee", {
+                method: 'GET',
+                credentials: 'include'
+            });
+            const employeeArray = await response.json(); //extract JSON from the http response
+
+            // Gebe Informationen von allen Mitarbeitern aus
+            employeeArray.forEach(function (employee) {
+                let appendString = "<tr>" +
+                    "<td>" + employee.givenname + " " + employee.surname + "</td>" +
+                    "<td>" + employee.birthday + "</td>" +
+                    "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='approveEmployee(\"" + employee.personID + "\")'>Hinzufügen</button></td>" +
+                    "</tr>";
+
+                mitarbeiterTabelle.append(appendString);
+            });
+        })
+    </script>
 </head>
 <body class="doktor-mitarbeiter-suche">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
