--- a/oshealthrec-website/public/doktor/profil.html
+++ b/oshealthrec-website/public/doktor/profil.html
@@ -10,6 +10,51 @@
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
+
+    <script>
+        $(document).ready(async function () {
+            // Hole ID des Nutzers aus dem Session Storage
+            let participantId = sessionStorage.getItem("participantId");
+            let participantType = sessionStorage.getItem("participantType");
+
+            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Arzt handelt
+            if (participantType != "Doctor") {
+                window.location.href = "../index.html";
+            }
+
+            // Hole Profil Daten des Doktors aus der Blockchain, falls sie nicht im Session Storage gespeichert sind.
+            if (sessionStorage.getItem("doktorProfil") == null) {
+                // Hole Profil Daten des Nutzers aus der Blockchain
+                const response = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor/" + participantId, {
+                    method: 'GET',
+                    credentials: 'include'
+                });
+                let profilJson = await response.json();
+
+                // Speichere Profil Daten im SessionStorage
+                let doktorProfil = JSON.stringify(profilJson);
+                sessionStorage.setItem("doktorProfil", doktorProfil);
+            }
+            // Hole Doktor Profil aus dem SessionStorage
+            let doktorProfil = JSON.parse(sessionStorage.getItem("doktorProfil"));
+
+            // Hole Textfelder als jquery Variable
+            let vorname = $('#vorname');
+            let nachname = $('#nachname');
+            let geschlecht = $('#geschlecht');
+            let geburtsdatum = $('#geburtsdatum');
+            let anschrift = $('#anschrift');
+
+            // Setz Werte der Textfelder
+            vorname.text(doktorProfil.givenname);
+            nachname.text(doktorProfil.surname);
+            geschlecht.text(doktorProfil.sex);
+            geburtsdatum.text(doktorProfil.birthday);
+            anschrift.html(doktorProfil.street + "<br />"
+                + doktorProfil.zipcode + " " + doktorProfil.city + "<br />"
+                + doktorProfil.country)
+        })
+    </script>
 </head>
 <body class="doktor-profil">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
