--- a/oshealthrec-website/public/mitarbeiter/profil.html
+++ b/oshealthrec-website/public/mitarbeiter/profil.html
@@ -10,6 +10,48 @@
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
+
+    <script>
+        $(document).ready(async function () {
+            // Hole ID des Nutzers aus dem Session Storage
+            let participantId = sessionStorage.getItem("participantId");
+            let participantType = sessionStorage.getItem("participantType");
+
+            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Mitarbeiter handelt
+            if (participantType != "Employee") {
+                window.location.href = "../index.html";
+            }
+
+            // Hole Profil Daten des Mitarbeiters aus der Blockchain, falls sie nicht im Session Storage gespeichert sind.
+            if (sessionStorage.getItem("mitarbeiterProfil") == null) {
+                // Hole Profil Daten des Nutzers aus der Blockchain
+                const response = await fetch(serverIp + "/api/org.oshealthrec.network.Employee/" + participantId, {
+                    method: 'GET',
+                    credentials: 'include'
+                });
+                let profilJson = await response.json();
+
+                // Speichere Profil Daten im SessionStorage
+                let mitarbeiterProfil = JSON.stringify(profilJson);
+                sessionStorage.setItem("mitarbeiterProfil", mitarbeiterProfil);
+            }
+
+            // Hole Mitarbeiter Profil aus dem SessionStorage
+            let mitarbeiterProfil = JSON.parse(sessionStorage.getItem("mitarbeiterProfil"));
+
+            // Hole Textfelder als jquery Variable
+            let vorname = $('#vorname');
+            let nachname = $('#nachname');
+            let geschlecht = $('#geschlecht');
+            let geburtsdatum = $('#geburtsdatum');
+
+            // Setz Werte der Textfelder
+            vorname.text(mitarbeiterProfil.givenname);
+            nachname.text(mitarbeiterProfil.surname);
+            geschlecht.text(mitarbeiterProfil.sex);
+            geburtsdatum.text(mitarbeiterProfil.birthday);
+        })
+    </script>
 </head>
 <body class="mitarbeiter-profil">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
