--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -10,6 +10,41 @@
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
+
+    <script>
+        $(document).ready(async function () {
+            // Hole ID des Nutzers aus dem Session Storage
+            let participantId = sessionStorage.getItem("participantId");
+            let participantType = sessionStorage.getItem("participantType");
+
+            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Patienten handelt
+            if (participantType != "Patient") {
+                window.location.href = "../index.html";
+            }
+
+            // Hole Tabelle als jquery Variable
+            let arztTabelle = $('#arztTabelle');
+
+            // Rest Aufruf um alle Doktoren zu erhalten
+            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor", {
+                method: 'GET',
+                credentials: 'include'
+            });
+            const doctorArray = await response.json();
+
+            // Gebe Informationen von allen Doktoren aus
+            doctorArray.forEach(function (doctor) {
+                let appendString = "<tr>" +
+                    "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>" +
+                    "<td>" + doctor.street + "<br />" + doctor.zipcode + " " + doctor.city + "<br />" + doctor.country + "</td>" +
+                    "<td>" + doctor.medical_specialty + "</td>" +
+                    "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='approveDoctor(\"" + doctor.personID + "\")'>Freigeben</button></td>" +
+                    "</tr>";
+
+                arztTabelle.append(appendString);
+            });
+        })
+    </script>
 </head>
 <body class="patient-arzt-suche">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
