--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -10,6 +10,61 @@
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
+
+    <script>
+        $(document).ready(async function () {
+            // Hole Daten aus dem Session Storage
+            let participantId = sessionStorage.getItem("participantId");
+            let participantType = sessionStorage.getItem("participantType");
+
+            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Patienten handelt
+            if (participantType != "Patient") {
+                window.location.href = "../index.html";
+            }
+
+            // Hole Tabelle als jquery Variable
+            let reportTabelle = $('#reportTabelle');
+
+            // Rest Aufruf um alle Doktoren zu erhalten
+            const doctorResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Doctor", {
+                method: 'GET',
+                credentials: 'include'
+            });
+            const doctorArray = await doctorResponse.json();
+
+            /*
+            Rest Aufruf um alle Reports des Patienten zu erhalten.
+            Aufgrund der Regeln in der Blockchain werden hier nur die Reports zurückgegeben, die dem Aufrufer zugeordnet sind.
+             */
+            const response = await fetch(serverIp + "/api/org.oshealthrec.network.Report", {
+                method: 'GET',
+                credentials: 'include'
+            });
+            const reportArray = await response.json(); //extract JSON from the http response
+
+            // Gebe Informationen von allen Reports aus
+            reportArray.forEach(function (report) {
+                // Hole Id des Doktors, der den Report hochgeladen hat
+                let doctorId = report.uploadedForDr.split('Doctor#')[1];
+
+                // Hole Doktor mit der übergebenen Id aus dem DoktorArray
+                let doctor = doctorArray.find(d => d.personID === doctorId);
+
+                let date = report.date.split('T')[0];
+
+                let appendString = "<tr>" +
+                    "<td>" + report.reportID + "</td>" +
+                    "<td>" + report.title + "</td>" +
+                    "<td>" + report.description + "</td>" +
+                    "<td>" + date + "</td>" +
+                    "<td>" + doctor.title + " " + doctor.givenname + " " + doctor.surname + "</td>" +
+                    "<td align='right'><button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='downloadReport(\"" + report.ref_location + "\")'>Herunterladen</button></td>" +
+                    "</tr>";
+
+                reportTabelle.append(appendString);
+            });
+        })
+    </script>
 </head>
 <body class="patient-dokumente">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
