--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -10,6 +10,52 @@
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
+
+    <script>
+        $(document).ready(async function () {
+            // Hole ID und Typ des Nutzers aus dem Session Storage
+            let participantId = sessionStorage.getItem("participantId");
+            let participantType = sessionStorage.getItem("participantType");
+
+            // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Patienten handelt
+            if (participantType != "Patient") {
+                window.location.href = "../index.html";
+            }
+
+            // Hole Profil Daten des Patienten aus der Blockchain, falls sie nicht im Session Storage gespeichert sind.
+            if (sessionStorage.getItem("patientProfil") == null) {
+                // Hole Profil Daten des Nutzers aus der Blockchain
+                const response = await fetch(serverIp + "/api/org.oshealthrec.network.Patient/" + participantId, {
+                    method: 'GET',
+                    credentials: 'include'
+                });
+                let profilJson = await response.json();
+
+                // Speichere Profil Daten im SessionStorage
+                let patientProfil = JSON.stringify(profilJson);
+                sessionStorage.setItem("patientProfil", patientProfil);
+            }
+
+            // Hole Patienten Profil aus dem SessionStorage
+            let patientProfil = JSON.parse(sessionStorage.getItem("patientProfil"));
+
+            // Hole Textfelder als jquery Variable
+            let vorname = $('#vorname');
+            let nachname = $('#nachname');
+            let geschlecht = $('#geschlecht');
+            let geburtsdatum = $('#geburtsdatum');
+            let blutgruppe = $('#blutgruppe');
+            let notfallkontakt = $('#notfallkontakt')
+
+            // Setz Werte der Textfelder
+            vorname.text(patientProfil.givenname);
+            nachname.text(patientProfil.surname);
+            geschlecht.text(patientProfil.sex);
+            geburtsdatum.text(patientProfil.birthday);
+            blutgruppe.text(patientProfil.bloodType);
+            notfallkontakt.text(patientProfil.emergency_contact);
+        })
+    </script>
 </head>
 <body class="patient-profil">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
