--- a/oshealthrec-website/public/index.html
+++ b/oshealthrec-website/public/index.html
@@ -14,6 +14,7 @@
         const serverIp = "http://34.67.49.75:3000";
 
         $(document).ready(async function () {
+            console.log("Test");
             // Ping Aufruf, um als Antwort den aufrufenden Participant zu erhalten
             const response = await fetch(serverIp + "/api/system/ping", {
                 method: 'GET',
